quick fix alignment for header, side nav, and map

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -10,7 +10,7 @@
        height: 791px;
        position: absolute;
        top: 121px;
-       left: 286px;
+       left: 276px;
      }
      
      /* bottom under nav */
@@ -21,7 +21,7 @@
        height: 90px;
        position: absolute;
        top: 820px;
-       left: 11px;
+       left: 0px;
      }
      div .checkbox.checkbox-1 {
        margin: 0px 0px 10px 40px;
@@ -44,7 +44,7 @@
        height: 700px;
        position: absolute;
        top: 120px;
-       left: 10px;
+       left: 0px;
      }
      #absolute-wrapper {
        position: relative;
